--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,8 +33,8 @@ a{
 .nav a:hover{
     color:orange;
     border:1px solid yellowgreen;
-    transition: color .2s;
-    transition: border .2s;
+    transition: color .2s, border .2s;
+    
 }
 
 
