--- a/estilos/stylecat.css
+++ b/estilos/stylecat.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding: 10px 20px;
 }
 #hijo{
     border:1px solid green;
